welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:14: error: reassignment to val
			return (die1=die1+1 || die2=die2+1)
                                    ^